--- a/src/components/Blocone/blocone.scss
+++ b/src/components/Blocone/blocone.scss
@@ -1,5 +1,30 @@
+@import '../../style/vars.scss';
+
 #blocone {
     width: 100%;
     height: 100vh;
-    background-color: #0f1627;
+    background-color: $blue-darken;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(15, 22, 39,1) 30%);
+  margin-top: 100vh;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  transition: 0.7s ease-in-out;
+  position: relative;
+  .content-container {
+    height: 80%;
+    width: 100%;
+    position: absolute;
+    display: block;
+    color: white;
+  }
+  &.open {
+    margin-top: 0;
+  }
+  h1 {
+    color:white;
+    display: none;
+    text-align: center;
+  }
   } 
