--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,8 +7,18 @@
     width: 40%;
   }
 }
+
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(15px); opacity: 0;}
+}
+
 #header {
-  position: relative;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: -1;
   .title {
     top: 400px;
     height: 100%;
@@ -41,5 +51,25 @@
     background-position: initial;
     height: 100vh;
     filter: brightness(70%);
+  }
+  .mousey {
+    width: 3px;
+    padding: 10px 15px;
+    height: 35px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+    opacity: 0.75;
+    box-sizing: content-box;
+    margin: 2rem auto;
+  }
+  .scroller {
+    width: 3px;
+    height: 10px;
+    border-radius: 25%;
+    background-color: #fff;
+    animation-name: scroll;
+    animation-duration: 2.2s;
+    animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+    animation-iteration-count: infinite;
   }
 } 
