Router is working | Console.log warnings to handle

--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -1,6 +1,6 @@
 @import '../../style/vars.scss';
 
-#blocone {
+#mainbloc {
     width: 100%;
     height: 100vh;
     background-color: $blue-darken;
