Starting the menu

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -2,4 +2,10 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
+}
+
+.app {
+position: absolute;
+width: 100%;
 } 
