--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  transition: 0.7s ease-in-out;
+  transition: 0.7s ease-out;
   position: relative;
   .content-container {
     height: 80%;
