--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -1,21 +1,17 @@
-@import '../../style/vars.scss';
-
 #mainbloc {
-    width: 100%;
-    height: 100vh;
-    background-color: $blue-darken;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(15, 22, 39,1) 30%);
+  width: 100%;
+  height: 100vh;
+  background-color: #0f1627;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(15, 22, 39,1) 20%);
   margin-top: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   transition: 0.7s ease-out;
-  position: relative;
   .content-container {
-    height: 80%;
-    width: 100%;
-    position: absolute;
+    height: 100%;
+    width: 60%;
     display: block;
     color: white;
   }
@@ -27,4 +23,4 @@
     display: none;
     text-align: center;
   }
-  } 
+}
