--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -1,7 +1,9 @@
+@import '../../style/vars.scss';
+
 #mainbloc {
   width: 100%;
   height: 100vh;
-  background-color: #0f1627;
+  background-color: $blue-darken;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(15, 22, 39,1) 20%);
   margin-top: 100vh;
   z-index: 2;
@@ -10,8 +12,8 @@
   align-items: flex-end;
   transition: 0.7s ease-out;
   .content-container {
-    height: 100%;
-    width: 60%;
+    height: 80%;
+    width: 100%;
     display: block;
     color: white;
   }
