--- a/src/components/Mainbloc/Menu/menu.scss
+++ b/src/components/Mainbloc/Menu/menu.scss
@@ -5,6 +5,14 @@
   width: 80%;
   right: 0;
   height: 100%;
+  .text{
+    font-size: 1.1rem;
+  }
+  .content {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
   .switch-wrapper {
     position: relative;
   }
