Add under-component 'SocialMedias'

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -8,10 +8,16 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  #contact-button {
+    transition: .4s;
+    position: relative;
+  }
+  
   .social-medias {
     display: flex;
     flex-direction: column;
   }
+
   .button {
     border-radius: 50%;
     background-color: #ffffff;
@@ -22,9 +28,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    &.open > svg:nth-child(1) {
+      opacity: 1;
+    }
+    &.open > svg:nth-child(2) {
+      opacity: 0;
+    }
+    & > svg:nth-child(2) {
+      opacity: 1;
+    }
     svg {
       pointer-events: none;
       transform: rotate(90deg);
+      transition: .4s;
+      opacity: 0;
+      position: absolute;
     }
   }
   .contact-element {
@@ -34,4 +52,4 @@
       color: $orange;
     }
   }
-} 
+}
