--- a/src/components/Mainbloc/Menu/menu.scss
+++ b/src/components/Mainbloc/Menu/menu.scss
@@ -2,9 +2,9 @@
 
 #menu {
   position: absolute;
-  width: 80%;
-  right: 0;
+  width: 100%;
   height: 100%;
+  right: 0;
   .text{
     font-size: 1.1rem;
   }
@@ -18,7 +18,7 @@
   }
   .section-title {
     font-size: 30px;
-    width: fit-content;
+    width: max-content;
     margin-left: 60px;
     height: 50px;
     align-items: flex-end;
