--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -10,10 +10,14 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  transition: 0.7s ease-out;
+  transition: 0.7s ease-in-out;
+  position: relative;
   .content-container {
-    height: 80%;
-    width: 100%;
+    height: 90%;
+    width: 80%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
     display: block;
     color: white;
   }
