--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,14 @@
 @media screen and (max-width: 1000px) {
   #app {
 
+    .mousey {
+      display: none;
+    }
+
+     .title {
+      bottom: 100px;
+    }
+
     .hamburger {
       display: block;
     }
@@ -60,7 +68,7 @@
       }
     }
 
-    #navbar {
+    #navbar, #navbar-mobile{
       background-color: #ffffff;
       height: 100vh;
       width: 100%;
@@ -68,7 +76,7 @@
       left: 0;
       top: -110%;
       z-index: 3;
-      transition: 1.3s ease-in-out;
+      transition: 0.5s ease-in-out;
 
       &.open {
         top: 0;
