--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,13 @@
 @import "src/style/vars";
 
 // Media Queries
+@media screen and (min-width: 1000px){
+  html, body {margin: 0; height: 100%; overflow: hidden;}
+}
 
 @media screen and (max-width: 1000px) {
+  html, body {margin: 0; height: 100%}
   #app {
-
     .mousey {
       display: none;
     }
@@ -88,7 +91,6 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  overflow: hidden;
   font-size: 17px;
   /* width */
   // Animated border style
