--- a/src/components/Mainbloc/NavbarMobile/navbarmobile.scss
+++ b/src/components/Mainbloc/NavbarMobile/navbarmobile.scss
@@ -15,6 +15,7 @@
  #navbar-mobile {
   background-color: #ffffff;
   height: 100vh;
+  height: 100vh;
   width: 20%;
   position: absolute;
   left: -20%;
