--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: flex-end;
   transition: 0.7s ease-in-out;
-  position: relative;
+  position: absolute;
   .content-container {
     height: 90%;
     width: 80%;
