--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -33,6 +33,8 @@
       overflow-x:hidden;
       justify-content: center;
       align-items: center;
+      padding: 0;
+      margin-top: 20px;
     }
 
     #technologies .content img {
@@ -43,6 +45,7 @@
       width: auto;
       overflow-y: auto;
       overflow-x: hidden;
+      height: 320px;
       .item {
         font-size: .8rem;
       }
@@ -267,7 +270,7 @@ body {
     }
   }
   ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
   }
   .swal2-styled {
     background-color: $orange !important;
