few display problems fixed

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -48,7 +48,7 @@
   }
   .background {
     background-image: url('../../style/images/paris.jpg');
-    background-position: initial;
+    background-position-x: center;
     height: 100vh;
     filter: brightness(70%);
   }
