--- a/src/components/Mainbloc/Menu/About/about.scss
+++ b/src/components/Mainbloc/Menu/About/about.scss
@@ -3,7 +3,7 @@
     &:after {
       content: none;
     }
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     max-height: 550px;
     p, h3 {
