--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import '../../style/vars.scss';
+@import 'src/style/vars';
 @keyframes open {
   from {
     width: 0%
@@ -7,31 +7,30 @@
     width: 40%;
   }
 }
-
 @keyframes scroll {
   0% { opacity: 0; }
   10% { transform: translateY(0); opacity: 1; }
   100% { transform: translateY(15px); opacity: 0;}
 }
-
 #header {
   position: fixed;
   width: 100%;
   top: 0;
   z-index: -1;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   .title {
-    top: 150px;
+    bottom: 0;
     height: 100%;
-    z-index: 1;
     position: absolute;
     margin-left: 30px;
     left: 0;
     right: 0;
     margin: 0 auto;
-    width: fit-content;
+    width: max-content;
     color: white;
     text-align: center;
-    height: fit-content;
+    height: max-content;
     hr {
       opacity: 0;
       &.open {
@@ -47,10 +46,11 @@
     }
   }
   .background {
-    background-image: url('../../style/images/paris.jpg');
-    background-position-x: center;
-    height: 100vh;
-    filter: brightness(70%);
+    background-position: top;
+    background-size: cover;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+    filter: brightness(90%);
   }
   .mousey {
     width: 3px;
@@ -72,4 +72,4 @@
     animation-timing-function: cubic-bezier(.15,.41,.69,.94);
     animation-iteration-count: infinite;
   }
-} 
+}
