--- a/src/components/Mainbloc/mainbloc.scss
+++ b/src/components/Mainbloc/mainbloc.scss
@@ -2,7 +2,7 @@
 
 #mainbloc {
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background-color: $blue-darken;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(15, 22, 39,1) 20%);
   margin-top: 100vh;
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: flex-end;
   transition: 0.7s ease-in-out;
-  position: absolute;
+  position: relative;
   .content-container {
     height: 90%;
     width: 80%;
@@ -20,6 +20,8 @@
     bottom: 0;
     display: block;
     color: white;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   &.open {
     margin-top: 0;
